unpackaged/objects/ACCObject2__c.object
<CustomObject>
    <description>123dsdsdsf</description>
    <fields>
        <fullName>Field1__c</fullName>
        <description>fdgfg</description>
        <label>Field1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>123</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <description>test</description>
        <label>Field2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Field3__c</fullName>
        <description>1233ds</description>
        <label>Field3</label>
        <type>Phone</type>
    </fields>
    <label>ACCObject2</label>
    <nameField>
        <label>ACCObject2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ACCObject2s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>